# bevy_stat_query

./: Cargo.toml  README.md
benches/: bench.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs
src/: attribute.rs  attributes.rs  buffer.rs  cache.rs  calc.rs  cowstr.rs  entity.rs  fraction.rs  lib.rs  lua.rs  num_traits.rs  operations.rs  param.rs  plugin.rs  qualifier.rs  querier.rs  reflect.rs  rounding.rs  stat.rs  stat_map.rs  stream.rs  traits.rs
src/types/: flags.rs  float.rs  int_pct.rs  int_ratio.rs  mod.rs  prioritized.rs  singleton.rs
tests/: asset.rs  complex.rs  derive.rs  distance.rs  fraction.rs  qualifier.rs  serde.rs
