[workspace]
members = ["derive"]

[package]
name = "bevy_stat_query"
version = "0.1.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_stat_query"
description = """
Blazing fast and versatile RPG stat system for the bevy engine.
"""
keywords = ["bevy", "stat"]

[features]
default = ["derive", "engine_mlua"]
derive = ["bevy_stat_query_derive"]

engine_none = []
engine_mlua = ["mlua"]

[lib]
doctest = false

[dependencies]
bevy_ecs = { version = "0.14.0" }
bevy_log = { version = "0.14.0" }
bevy_hierarchy = { version = "0.14.0" }
bevy_app = { version = "0.14.0" }
bevy_reflect = { version = "0.14.0" }
serde = { version = "1", features = ["derive"] }
erased-serde = "0.4.3"
ref-cast = "1"
thiserror = "1"
num-integer = { version = "0.1", default-features = false }
num-rational = { version = "0.4.1", default-features = false, features = ["serde"] }
num-traits = { version = "0.2.18", default-features = false }
bevy_serde_lens_core = { version = "0.14.0" }
rustc-hash = "2.0.0"
bevy_stat_query_derive = { version = "0.1", path = "./derive", optional = true }
mlua = { version = "0.9.9", features = ["lua54"], optional = true }

[dev-dependencies]
bevy = "0.14.0"
bitflags = "2.4.2"
num_enum = "0.7.2"
postcard = { version = "1.0.8", features = ["alloc"], default-features = false }
serde_json = "1.0.114"
strum = { version = "0.26.2", features = ["derive"] }
bevy_serde_lens = { version = "0.4.0" }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
