[package]
name = "bevy_stat_query_derive"
version = "0.1.1"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_stat_query"
description = """
Derive macros for `bevy_stat_query`.
"""
keywords = ["bevy", "rpg", "stat"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"
